--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -9,3 +9,7 @@
 {% else %}
 <p>No polls are available.</p>
 {% endif %}
+
+{% load static %}
+
+<link rel="stylesheet", href="{% static 'polls/style.css' %}">
